--- a/test.html
+++ b/test.html
@@ -35,5 +35,9 @@
     <div id="main">
     </div>
 </body>
-
+<script>
+    let a = 0
+    console.log(a+=90);
+    console.log(a+=90);
+</script>
 </html>
